--- a/art/index.html
+++ b/art/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Katherine Armour</title>
+		<title>drawings n paintings </title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -20,7 +20,13 @@
     		<div class="blurb">
         		<h1>Shhhhh</h1>
 				<p>this is <em>nothing </em> shh <a href="/about">no...</a></p>
-    		</div><!-- /.blurb -->
+            </div><!-- /.blurb -->
+            <img src="selfie.jpg">
+            <img src="liquid.jpg">
+            <img src="leta.jpg">
+            <img src="sink.jpg">
+            <img src="papa bill.jpg">
+            <img src="house.jpg">
 		</div><!-- /.container -->
 		<footer>
     		<ul>
